Refactor ChooseGameModeControllerTest to improve assertions and remove unused tests